new lines were not counted in max limit of textarea in html page, new lines will be erased before posting new msg to server

--- a/chatAppInCaptivePortal/index.html
+++ b/chatAppInCaptivePortal/index.html
@@ -152,6 +152,10 @@
     let textToSend = document.getElementById("sendToChat").value; 
     document.getElementById("sendToChat").value = ""; // clear textarea 
     
+    // erase new line
+    username = username.replace(/(\r\n|\n|\r)/gm, "");
+    textToSend = textToSend.replace(/(\r\n|\n|\r)/gm, "");
+    
     let date = getDate();
     let jsonToSend = {
       "date": date,
